--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "dodo-agent"
+name = "dodoai"
 version = "0.1.0"
 description = "DoDo - A stateful agentic framework"
 readme = "README.md"
